--- a/css/ridethru.css
+++ b/css/ridethru.css
@@ -140,6 +140,7 @@ hr {
     #to-top #right-hr hr {margin-top: 20px;}
     .bot-images {margin-top: 20px;}
     .right-images {margin-top: 20px;}
+	.mid-images {margin-top: 20px;}
 }
 
 /* Mobile landscape */
@@ -149,6 +150,7 @@ hr {
     #to-top #right-hr hr {margin-top: 20px;}
     .bot-images {margin-top: 20px;}
     .right-images {margin-top: 20px;}
+	.mid-images {margin-top: 20px;}
 }
 
 /* Tablet and desktop */
