--- a/css/tcingc.css
+++ b/css/tcingc.css
@@ -133,6 +133,7 @@ hr {
 	#to-top #right-hr hr {margin-top: 20px;}
 	.bot-images {margin-top: 20px;}
 	.right-images {margin-top: 20px;}
+	.mid-images {margin-top: 20px;}
 }
 
 /* Mobile landscape */
@@ -142,6 +143,7 @@ hr {
 	#to-top #right-hr hr {margin-top: 20px;}
 	.bot-images {margin-top: 20px;}
 	.right-images {margin-top: 20px;}
+	.mid-images {margin-top: 20px;}
 }
 
 /* Tablet and desktop */
